# pictoexcl

./: README.md  pyproject.toml  readme.md
src/vehicle_records_extractor/: __init__.py  db.py  extraction.py  main.py  models.py  normalization.py  ocr.py  services.py
