[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-records-extractor"
version = "0.1.0"
description = "Local offline desktop app for extracting and reviewing Arabic vehicle/person records from images and PDFs into Excel."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "Pillow>=10.0",
    "opencv-python>=4.8",
    "openpyxl>=3.1",
    "pandas>=2.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
pdf = ["PyMuPDF>=1.23"]

[project.scripts]
vehicle-records-extractor = "vehicle_records_extractor.main:main"

[tool.setuptools.packages.find]
where = ["src"]
